--- a/sistema-celular.css
+++ b/sistema-celular.css
@@ -61,7 +61,6 @@
 
   header {
 
-    background-color: black;
     justify-content: space-between;
     align-self: center;
 
@@ -105,6 +104,7 @@
 
     div#container_menu_escondido {
       margin-top: 200px;
+      font-size: 11px;
     }
 
     div#container_menu_escondido>a {
