--- a/style-home/pc.css
+++ b/style-home/pc.css
@@ -1,27 +1,46 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Nunito:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap');
 
 
+/*animações*/
+
+@keyframes logo {
+    from {
+        transform: translatex(0px);
+
+    }
+
+
+    to {
+        transform: translateY(-6px);
+        opacity: 1;
+    }
+}
 
 
 
 @keyframes text {
     from {
-        transform: translatex(0px);
+        transform: translatex(-25px);
 
     }
 
 
     to {
-        transform: translateY(-25px);
+        transform: translateY(0px);
         opacity: 1;
     }
+}
+
+.anim_txt{
+    animation: text 1s 1s ease-in-out forwards;
+    opacity: 0;
 }
 
 
 
 
-@keyframes cartao_01 {
+@keyframes simples {
     from {
         transform: translatex(0px);
 
@@ -34,359 +53,307 @@
     }
 }
 
-
-
-@keyframes cartao {
-    to {
-        transform: rotateX(360deg)
-    }
+.anim_simples{
+    animation: simples 3s 1s ease-in-out forwards;
+    opacity: 0;
 }
 
 
-
-@keyframes logo {
+@keyframes simples {
     from {
-        transform: translateX(100%);
-        opacity: 0;
+        transform: translatex(0px);
+
     }
 
 
     to {
-        transform: translateX(0px);
+        transform: translateY(-35px);
         opacity: 1;
     }
 }
 
+.anim_simples_02{
+    animation: simples 1s 2ms ease-in-out forwards;
+    opacity: 0;
+}
 
-@keyframes duvidas_botao {
 
+@-webkit-keyframes scale-up-hor-right {
     0% {
-        transform: translatex(0px);
+      -webkit-transform: scaleX(0.4);
+              transform: scaleX(0.4);
+      -webkit-transform-origin: 100% 100%;
+              transform-origin: 100% 100%;
     }
-
-    50% {
-        transform: translateY(4px);
-    }
-
     100% {
-        transform: translateX(0px);
+      -webkit-transform: scaleX(1);
+              transform: scaleX(1);
+      -webkit-transform-origin: 100% 100%;
+              transform-origin: 100% 100%;
     }
-
+  }
+  @keyframes scale-up-hor-right {
+    0% {
+      -webkit-transform: scaleX(0.4);
+              transform: scaleX(0.4);
+      -webkit-transform-origin: 100% 100%;
+              transform-origin: 100% 100%;
+    }
+    100% {
+      -webkit-transform: scaleX(1);
+              transform: scaleX(1);
+      -webkit-transform-origin: 100% 100%;
+              transform-origin: 100% 100%;
+    }
+  }
+  
+.scale-up-hor-right {
+	-webkit-animation: scale-up-hor-right 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+	animation: scale-up-hor-right 0.4s ease-out cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
+
+
+
+
+
+
+/*corpo do html*/
+
+.icon-menu {
+    height: 25px;}
+
+:root {
+    ---Font: 'Nunito', sans-serif;
+    ---Cor01: rgb(62, 147, 255);
+    ---Cor03: #034e6bd0;
+    ---Cor04: #036b05df;}
 
 * {
     margin: 0px;
     padding: 0px;
-    font-family: 'Noto Sans JP', sans-serif;
-    color: #fff;
-}
+    font-family: Arial, Helvetica, sans-serif;}
 
 body {
-    background: rgb(30, 201, 238);
-    background: linear-gradient(90deg, rgba(30, 201, 238, 1) 0%, rgba(43, 131, 205, 1) 100%, rgba(30, 201, 238, 1) 100%);
-    margin: 0 auto;
-
-    
-    
-
+    margin: auto;
+    height: 100vh;
+    background: var(---Cor01);
+    background: linear-gradient(45deg, rgba(62, 147, 255, 1) 24%, rgba(68, 171, 223, 1) 68%);
 
 }
 
 header {
+    cursor: pointer;
     display: flex;
-    justify-content: space-evenly;
     align-items: center;
-    gap: 200px;
+    padding: 10px;
+    margin-bottom: 4em; }
 
-    height: 90px;
-    margin-bottom: 100px;
-
-}
-
-header>img {
-    animation: logo 2s 1ms ease-in-out forwards;
+header> a > img#logotipo {
+    animation: logo 1s 1s ease-in-out forwards;
     opacity: 0;
-}
-span#menu{
+    height: 94px;
+    margin-left: 20px;}
+
+header>img#menu_icon {
+    animation: logo 1s 1s ease-in-out forwards;
+    opacity: 0;
+    position: absolute;
+    right: 2em;
+
+    display: block;
+    height: 50px;}
+
+menu {
+    background: var(---Cor01);
+    background: linear-gradient(45deg, rgb(48 184 255) 24%, rgb(123 211 255) 68%);
+    border-radius: 30px 0px 0px 30px;
+    
+    cursor: pointer;
     display: none;
-  }
+    flex-direction: column;
+    align-items: center;
+    width: 5em;
+    gap: 3em;
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 20px;
+    z-index: 1;}
 
-  div#menu_escondido{
-    display: none;
-  }
-
-header>a#duvidas {
-    animation: duvidas_botao 3s 1ms ease-in-out infinite;
-    height: 40px;
-    width: 100px;
-
-    border: 3px solid #fff;
-    border-radius: 5px;
-
-    text-decoration: none;
-    text-align: center;
-    line-height: 40px;
-    color: #fff
-}
-
-header>a#duvidas:hover{
-    border: 3px solid rgb(26, 224, 135);
-  
-}
+menu>#img-menu-ativo {
+    height: 25px;}
 
 main {
     display: flex;
+    justify-content: center;
     align-items: center;
-    justify-content: space-evenly;
-    margin: 0 auto;
-    margin-bottom: 50px;
-}
+    gap: 5em;
+    padding: 25px;
+    width: 84%;
+    margin: auto;}
 
-main>div.container_01 {
-    width: 39%;
-    padding: 20px;
+main>#container_01 {
+    padding: 10px;
+    width: 42em;}
 
-}
+main>#container_01>h1 {
 
+    font-family: var(---Font);
+    font-size: 3.6em;
 
-main>div.container_01>h1 {
-    animation: text 2s 1s ease-in-out forwards;
-    opacity: 0;
-    font-size: 40px;
-    margin-bottom: 10px;
-    text-shadow: 1px 1px 1px #0000005e;
-}
+    color: #ffffffd5;
+    margin-bottom: 4px;
+    text-shadow: 1px 1px 3px #00000026;}
 
-main>div.container_01>p {
-    animation: text 2s 1s ease-in-out forwards;
-    opacity: 0;
-    margin-bottom: 30px;
-    text-shadow: 1px 1px 5px #00000017;
-    color: #ffffffe0;
-}
-
-
-main>div.container_01>#msg {
-    animation: text 2s 1s ease-in-out forwards;
-    opacity: 0;
-
-
-    display: flex;
-    align-items: center;
-    gap: 10px;
-
+main>#container_01>p {
+  
+    font-family: var(---Font);
     font-size: 20px;
-    width: 300px;
-}
+    font-weight: bold;
 
-#msg>p {
-    text-shadow: 1px 1px 5px #00000017;
-    color: #ffffff;
-}
+    line-height: 25px;
+    margin-bottom: 1em;
+    color: var(---Cor03);
+    text-shadow: 1px 1px 3px #0000000f;}
 
-
-main>img {
-    animation: cartao_01 3s 1s ease-in-out forwards;
+article#img_container {
+    animation: simples 1s 1s ease-in-out forwards;
     opacity: 0;
-}
+    margin: auto;
+    padding: 5px;}
 
+#img-cartao-familia {
+    display: block;
+    height: 390px;}
 
-
-article#nav {
-    animation: text 2s 1s ease-in-out forwards;
+#container_01>div.botao {
+    animation: text 1s 1s ease-in-out forwards;
     opacity: 0;
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    background-color: rgba(255, 255, 255, 0.932);
-    height: 70px;
-    margin-bottom: 100px;
-    
-}
-
-div#are_de_menu{
-    margin-left: 80px;
-  
-}
-
-div#are_de_menu > a{
-    animation: text 2s 1s ease-in-out forwards;
-    opacity: 0;
-    font-size: 18px;
-    margin-left: 30px;
-    text-decoration: none;
-    color: rgb(20, 146, 174);
-}
-
-div#are_de_menu > a:hover{
-    text-decoration: underline;
-    transition-duration: 1s;
-    color: rgb(20, 174, 125);
-  
-}
-
-section#container_text_form{
+    cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap:30px;
-    padding: 50px;
-    background-color: aliceblue;
+    gap: 1em;
+    background-color: rgba(255, 255, 255, 0.459);
+    border-radius: 20px;
+    padding: 10px;
+    width: 20em;
+    font-family: var(---Font);
 
-   
-}
+    font-size: 20px;
+    font-weight: 800;
+    color: var(---Cor03);
+    text-shadow: 1px 1px 3px #0000000f;}
 
-div.container_consulta_text {
-    display: flex;
-    flex-direction: column;
-    gap:40px;
+#container_01>div.botao:hover {
+    background-color: rgba(255, 255, 255, 0.704);}
 
-    width: 30%;
-    padding: 30px;
-    animation: text 2s 1s ease-in-out forwards;
-    opacity: 0;
-    
-    
-}
+#container_01>a#entre-contato {
 
-div.container_consulta_text > h1{
-    font-size: 30px;
-    padding-left: 10px;
-    color: rgb(37, 151, 177);
-}
+    cursor: pointer;
 
-div.container_consulta_text > p{
-    padding-left: 10px;
-    color: rgb(37, 151, 177);
-    border-left: 1px solid rgb(20, 174, 125);
-}
-
-div.container_consulta_text > .consultar_botao{
-    display: block;
-    margin: auto;
-    
-    padding: 5px;
-    width: 80%;
-
-
-    background-color: rgb(213, 230, 245);
-    font-size: 18px;
-    color: rgb(19, 82, 97);
-
-    border: none;
-}
-
-div.container_consulta_text > .consultar_botao:hover{
-      background-color:  rgb(20, 174, 125);
-      color: rgb(255, 255, 255);
-      transition-duration: 1s;
-      cursor: pointer;
-}
-
-div.container_consulta_text > #consultar_botao:hover{
-    border: 1px solid #fff;
-    color: rgb(20, 174, 125);
-   
-}
-
-section > img{
-    animation: text 1ms 1ms ease-in-out forwards;
-    opacity: 0;
-    display: block;
-    height: 300px;
-    border-radius: 10px;
-   
-}
-
-div.container_consulta_form{
     display: none;
-    padding: 20px;
-    background-color: #ffffff;
-     border-radius: 20px;
-     box-shadow: 15px 4px 1px #0000001f;
-    }
+    align-items: center;
+    justify-content: center;
+    gap: 1em;
 
+    background-color: var(---Cor03);
+    border-radius: 20px;
 
- input{
+    
+    padding: 10px;
+    width: 26em;
+
+    font-family: var(---Font);
+    font-size: 18px;
+    font-weight: 800;
+    color: rgba(255, 255, 255, 0.877);
+    text-decoration: none;
+    text-shadow: 1px 1px 3px #0000000f;}
+
+#container_01>a#entre-contato:hover {
+    background-color: var(---Cor04);}
+
+form {
+    display: none;
+    flex-direction: row-reverse;
+    align-items: center;
+    padding:20px;}
+
+div#formulario_container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center ;
     margin: auto;
+    padding: 40px;
+    border-radius: 20px;
+    background: linear-gradient(45deg, rgb(66 131 213) 24%, rgb(105 205 255) 68%);
+    box-shadow: 2px 1px 11px #00000012;}
+   
+div#formulario_container>h3 {
+    font-family: var(---Font);
+   
+    text-align: center;
+    font-size: 22px;
+    color: #fff;
+    padding-bottom: 10px;
+    text-shadow: 1px 1px 3px #00000042;}
 
-    background-color: transparent;
+div#container-img-consultar {
+    height: 25em;
+    width: 45em;}
+
+input {
+    font-family: var(---Font);
+    background-color: #00800000;
     border: none;
     outline: none;
-    border-bottom: 1px solid  rgb(20, 146, 174);;
+    border-bottom: 1px solid #ffff;
+    padding-bottom: 3px;
+    color: #ffffffeb;
+    text-shadow: 1px 1px 3px #0000000f;}
 
-    color: rgb(20, 146, 174);
-}
+input#submit {
+    margin-top: 25px;
+    margin-bottom: 7px;}
 
-input.consultar_botao_02{
-    background-color: rgb(197, 197, 203);
-    padding: 10px;
+label {
+    font-family: var(---Font);
+    color: #ffffffeb;
+    margin-top: 10px;
+    padding: 2px;
+    text-shadow: 1px 1px 3px #0000000f;}
 
-    margin-top: 50px ;
-    width: 90%;
-    border: 1px solid rgb(220, 220, 220);
-    color: #fff;
-    border-radius: 10px;
-}
-
-input::placeholder{
-    color:rgb(150, 140, 140);
-}
-
-input.consultar_botao_02:hover{
-    background-color:  rgb(20, 174, 125);
-    transition-duration: 1s;
+.bt-enviar {
+    font-family: var(---Font);
     cursor: pointer;
-}
+    background-color: rgba(255, 255, 255, 0.623);
+    border-radius: 20px;
+    padding: 7px;
 
-section#container_resp{
-    background: rgb(41,142,210);
-    background: linear-gradient(8deg, rgba(41,142,210,1) 20%, rgba(1,175,213,1) 100%);
- margin: auto;
-    padding: 30px;
-}
+    font-size: 15px;
+    font-weight: bold;
+    color: var(---Cor03);
+    border: none;
+    text-shadow: 1px 1px 3px #0000000f;
+    margin-top: 1em;}
 
-section#container_resp > h2{
-    text-align: center;
-    font-size: 2em;
-    color:rgb(255, 255, 255);
-}
+.bt-enviar:hover {
+    background-color: rgba(255, 255, 255, 0.819);}
 
-div#resposta_caixa > p{
-   display: inline;
-    text-align: center;
-    color: rgb(236, 240, 241);
-    margin-right: 80px;
-    
-}
+.bt-reset {
+    cursor: pointer;
+    background-color: var(---Cor03);
 
-footer{
-    background-color: #fff;
-    height: 10px;
-}
+    border-radius: 20px;
+    padding: 7px;
+    font-family: var(---Font);
 
-span#ativo{
-    color:green;
-}
+    font-size: 15px;
+    font-weight: bold;
+    color: rgba(255, 255, 255, 0.853);
+    border: none;
+    text-shadow: 1px 1px 3px #0000000f;
+margin-top: 5px;}
 
-span#inativo{
-    color:brown;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.bt-reset:hover {
+    background-color: rgba(168, 70, 70, 0.819);}
