--- a/style-home/iphone.css
+++ b/style-home/iphone.css
@@ -3,9 +3,6 @@
 @media screen and (min-width: 120px) and (max-width: 1116px) {
 
 
-    body,html{
-        height: 120vh;
-    }
     header> a> img#logotipo {
         height: 70px;}
 
@@ -34,19 +31,23 @@
     }
 
     main > div#container_01 >p{
-        font-size: 14px;}
+        font-size: 14px;
+       margin-bottom: 1em;}
 
     #container_01>div.botao{
            
         margin: auto;
         padding: 12px;
-        font-size: 15px; }
+        font-size: 15px;
+       margin-bottom: 2em; }
 
     #container_01>a#entre-contato{
         margin: auto;
         padding: 12px;
         font-size: 15px;
-         width: 80%;}
+         width: 80%;
+         margin-bottom: 2em;
+       }
 
     #entre-contato>img{
         height:25px;}
