--- a/style-home/pc.css
+++ b/style-home/pc.css
@@ -134,8 +134,8 @@
     font-family: Arial, Helvetica, sans-serif;}
 
 body {
-        margin: auto;
-    background: var(---Cor01);
+    height: 100vh;
+    margin: 0 auto;
     background: linear-gradient(45deg, rgba(62, 147, 255, 1) 24%, rgba(68, 171, 223, 1) 68%);}
 
 header {
@@ -143,7 +143,8 @@ header {
     display: flex;
     align-items: center;
     padding: 10px;
-    margin-bottom: 4em; }
+    margin-bottom: 80px;
+   }
 
 header> a > img#logotipo {
     animation: logo 1s 1s ease-in-out forwards;
@@ -184,7 +185,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 5em;
+    gap: 7em;
     padding: 25px;
     width: 84%;
     margin: auto;}
@@ -279,12 +280,14 @@ form {
 
 div#formulario_container {
     display: flex;
+    justify-content: center;
     flex-direction: column;
     margin: auto;
     padding: 40px;
     border-radius: 20px;
     background: linear-gradient(45deg, rgb(66 131 213) 24%, rgb(105 205 255) 68%);
-    box-shadow: 2px 1px 11px #00000012;}
+    box-shadow: 2px 1px 11px #00000012;
+    height: 20em;}
    
 div#formulario_container>h3 {
     font-family: var(---Font);
@@ -305,7 +308,6 @@ input {
     border: none;
     outline: none;
     border-bottom: 1px solid #ffff;
-    padding-bottom: 3px;
     color: #ffffffeb;
     text-shadow: 1px 1px 3px #0000000f;}
 
@@ -355,6 +357,3 @@ margin-top: 5px;}
 .bt-reset:hover {
     background-color: rgba(168, 70, 70, 0.819);}
 
-footer{
-    height: 8vh;
-}
