--- a/style-home/home-pc.css
+++ b/style-home/home-pc.css
@@ -120,7 +120,7 @@
 /*corpo do html*/
 
 .icon-menu {
-    height: 25px;}
+    height: 28px;}
 
 :root {
     ---Font: 'Nunito', sans-serif;
@@ -164,22 +164,32 @@ header>img#menu_icon {
 menu {
     background: var(---Cor01);
     background: linear-gradient(45deg, rgb(48 184 255) 24%, rgb(123 211 255) 68%);
-    border-radius: 30px 0px 0px 30px;
+    border-radius: 10px 0px 0px 30px;
     
     cursor: pointer;
+
     display: none;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    width: 5em;
     gap: 3em;
+    width: 5em;
+   
+ 
     position: absolute;
     top: 0;
     right: 0;
-    padding: 20px;
+    padding: 30px;
     z-index: 1;}
 
+
+menu > a > img:hover{
+   transform: scale(1.2);
+   transition-duration: 1s;
+}
+
 menu>#img-menu-ativo {
-    height: 25px;}
+    height: 30px;}
 
 main {
     display: flex;
