--- a/style-log/log-iphone.css
+++ b/style-log/log-iphone.css
@@ -15,13 +15,15 @@
   }
 
   form >h2 {
-   font-size: 27px;
-   margin-bottom: 28px;
+   font-size: 16px;
+   margin-bottom: 38px;
 }
 
-  div.container_img>#img_login {
-    height: 300px;
 
+
+div.container_img {
+   padding: 10px;
+   display: none;
 }
 
 }
