--- a/style-log/log-iphone.css
+++ b/style-log/log-iphone.css
@@ -14,15 +14,21 @@
   
   }
 
+  form {
+   margin: auto;
+   padding: 40px;
+}
+
+
   form >h2 {
-   font-size: 16px;
-   margin-bottom: 38px;
+   font-size: 13px;
+   margin-bottom: 20px;
 }
 
 
 
 div.container_img {
-   padding: 10px;
+   padding: 0px;
    display: none;
 }
 
