--- a/styles/style-index/index-screen.css
+++ b/styles/style-index/index-screen.css
@@ -31,7 +31,8 @@
 
     main > div#container_01 >p{
         font-size: 14px;
-        width: 93% }
+        width: 23em;
+        margin: auto;}
 
    
 
@@ -43,18 +44,19 @@ div.bottom_consultar {
 
     padding: 8px;
     border-radius: 40px;
-    background-color: rgba(23, 139, 197, 0.521);
+  
 
     margin: auto;
-    width: 90%;
+    width: 80%;
     margin-bottom: 9px;
+    margin-top: 9px;
 }
 
 div.bottom_consultar > a {
     font-size: 16px;
     font-family: var(---Font);
     font-weight: bold;
-    color: #ffff;
+
 
     text-decoration: none;
     text-shadow: 1px 1px 3px #0000000f;
