--- a/home/styles/style-index/index-all.css
+++ b/home/styles/style-index/index-all.css
@@ -9,17 +9,44 @@
 
 
 @keyframes logo {
-    from {
+    0% {
         transform: translatex(0px);
 
     }
 
 
-    to {
+    50% {
         transform: translateY(-6px);
         opacity: 1;
     }
+
+    100%{
+        transform: translatex(0px);
+        opacity: 1;
+    }
 }
+
+@keyframes icone-log {
+    0% {
+        transform: translatex(0px);
+       
+
+    }
+
+
+    50% {
+        transform: translateY(-12px);
+        
+    }
+
+    100%{
+        transform: translatex(0px);
+        
+
+    }
+}
+
+
 
 
 
@@ -90,8 +117,8 @@
 
 /*corpo do html*/
 
-.icon-menu {
-    height: 34px;
+#icon {
+    height: 24px;
 }
 
 :root {
@@ -108,18 +135,20 @@
 }
 
 body {
-    height: 1310px;;
+    height: 1310px;
     margin: 0 auto;
     background: linear-gradient(45deg, rgba(62, 147, 255, 1) 24%, rgba(68, 171, 223, 1) 68%);
 }
 
 header {
+
     cursor: pointer;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     padding: 15px;
-
 }
+
 
 header>a>img#logotipo {
     animation: logo 1s 1s ease-in-out forwards;
@@ -128,23 +157,16 @@ header>a>img#logotipo {
     margin-left: 5em;
 }
 
-header> a > img#icon {
-    animation: logo 1s 1s ease-in-out forwards;
-    opacity: 0;
-
-    position: absolute;
-    right: 0;
-    margin-right: 5em;
-
-  
+header>#icone-log > img{
+    animation: icone-log 4s 2ms ease-in-out infinite;
+   
     height: 50px;
-    cursor: pointer;
-    
-}
+    margin-right: 2em;}
 
 
 
-main{
+
+main {
 
     display: flex;
     align-items: center;
@@ -153,77 +175,82 @@ main{
     padding: 25px;
     width: 60em;
     margin: auto;
-    margin-bottom: 8em;
+    margin-bottom: 4em;
 }
 
 div#container_01 {
     padding: 10px;
 }
 
-div#container_01 > h1{
-   font-family: var(---Font);
-   font-size: 3em;
-   font-weight: bold;
-   color: #fff;
-
-   text-shadow: 1px 1px 1px  rgba(0, 0, 0, 0.105);
-   margin-bottom: 10px;
+div#container_01>h1 {
+    font-family: var(---Font);
+    font-size: 3em;
+    font-weight: bold;
+    color: #fff;
+    text-shadow: 1px 1px 1px rgb(0 0 0 / 11%);
+    margin-bottom: 10px;
 }
 
-div#container_01 > p{
+
+div#container_01>p {
     font-family: var(---Font);
     font-size: 18px;
     margin-bottom: 25px;
-
     color: #fff;
-    text-shadow: 1px 1px 1px  rgba(0, 0, 0, 0.105);
+    text-shadow: 1px 1px 1px rgb(0 0 0 / 11%);
 }
 
-div.bottom_consultar{
+div.bottom_consultar {
     animation: text 1s 1s ease-in-out forwards;
     opacity: 0;
-
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 10px;
-
     width: 15em;
     padding: 14px;
-
     border-radius: 12px;
     background-color: var(---Cor03);
 }
 
+div.bottom_consultar:hover {
+    background-color: #0778a4d0;
+    transition-duration: 1s;
+    cursor: pointer;
+}
 
-div.bottom_consultar > a{
+div.bottom_consultar>a {
     font-family: var(---Font);
     font-weight: bold;
     text-decoration: none;
     color: #fff;
 }
 
-div.bottom_consultar > a:hover{
-    transform: scale(1.1);
-    transition-duration: 1s;
-}
-article#img_container{
+
+
+article#img_container {
     animation: simples 1s 1s ease-in-out forwards;
     opacity: 0;
+
+    height: 500px;
 }
 
-article#img_container > img#foto_main{
+article#img_container>img#foto_main {
     height: 500px;
 }
 
 /*formulario em */
 
 
-section{
+section {
+    animation: simples 1s 1s ease-in-out forwards;
+    opacity: 0;
+
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
+    box-shadow: 1px 1px 1px 9px rgb(52 139 251 / 24%);
     background-color: #fff;
     border-radius: 10px;
 
@@ -232,44 +259,44 @@ section{
     width: 50em;
 }
 
-form{
+form {
     display: flex;
     flex-direction: column;
-    
-     
-   
+
+
+
     border-right: 3px solid rgb(62, 146, 255);;
 
     width: 20em;
     height: 20em;
     padding: 30px;
-   
+
 }
 
-form > h1{
+form>h1 {
     font-family: var(---Font);
     color: var(---Cor01);
     font-weight: bold;
     font-size: 2em;
-    margin-bottom:8px;
+    margin-bottom: 8px;
 }
 
-form > h2{
+form>h2 {
     font-family: var(---Font);
     color: rgb(29, 184, 34);
     font-size: 18px;
-    margin-bottom:17px;
+    margin-bottom: 17px;
 }
 
-form > p{
+form>p {
     font-family: var(---Font);
     color: var(---Cor01);
     font-size: 14px;
-    
-    margin-bottom:2em;
+
+    margin-bottom: 2em;
 }
 
-form > input{
+form>input {
     margin-bottom: 1em;
     border: none;
     outline: none;
@@ -280,62 +307,60 @@ form > input{
     color: var(---Cor01);
 }
 
-form > label{
+form>label {
     font-family: var(---Font);
     color: var(---Cor01);
 }
 
-input::placeholder{
-    color:rgba(62, 146, 255, 0.568);
+input::placeholder {
+    color: rgba(62, 146, 255, 0.568);
 }
 
-div#container_inputs{
+div#container_inputs {
     height: 40em;
 }
 
-div#container_submit{
-    margin-top: 1em;   
-  
+div#container_submit {
+    margin-top: 1em;
+
 }
 
-input#bottom_consultar{
-display: block;
-margin: auto;
-width: 80%;
+input#bottom_consultar {
+    display: block;
+    margin: auto;
+    width: 80%;
 
-border-radius: 10px;
-border: none;
-padding: 5px;
-cursor: pointer;
+    border-radius: 10px;
+    border: none;
+    padding: 7px;
+    cursor: pointer;
 
-background-color: var(---Cor01);
-font-family: var(---Font);
-font-weight: bold;
-color: #fff;
+    background-color: var(---Cor01);
+    font-family: var(---Font);
+    font-weight: bold;
+    font-size: 15px;
+    color: #fff;
 }
 
-input#bottom_consultar:hover{
-   
- background-color: rgb(29, 184, 34);
+input#bottom_consultar:hover {
+
+    background-color: rgb(29, 184, 34);
 }
-    
 
 
 
-#container_img{
+
+#container_img {
     width: 20em;
     height: 20em;
     padding: 10px;
 }
 
-img#img{
+img#img {
     display: block;
     margin: auto;
     height: 20em;
     width: 20em;
 
-    
+
 }
-
-
-
