--- a/home/styles/style-index/index-screen.css
+++ b/home/styles/style-index/index-screen.css
@@ -2,171 +2,145 @@
 
 @media screen and (min-width: 120px) and (max-width: 1116px) {
 
-    body{
-        height: 1900px;
-    }
-
-    header {
-        justify-content: space-between;
-        padding: 25px;
-       
+    
+    header{
+        align-items: center;
+        margin-bottom: 4em;
     }
 
     header>a>img#logotipo {
         height: 80px;
-        margin: 0;
-       
+        margin-left: 1em;
     }
 
-    header>img#icon {
+    header>#icone-log>img {
+        animation: logo 1s 1s ease-in-out forwards;
+        opacity: 0;
+
         height: 40px;
-        margin-right: 25px;   
+        margin-left: 2em;
     }
 
     main{
-
-        display: flex;
+        align-items: flex-start;
         flex-direction: column;
-        align-items: center;
-        gap: 1em;
-    
-        padding: 10px;
         width: 20em;
-        margin: auto;
+
+        gap: 5em;
     }
 
-    div#container_01{
-        margin: auto;
+    div#container_01>h1 {
+        font-family: var(---Font);
+        font-size: 25px;
+        text-align: center;
     }
 
+    div#container_01> p {
+        font-family: var(---Font);
+        font-size: 14px;
 
-    div#container_01 > h1{
-       
-        font-size: 34px;
-        margin-bottom: 25px;
-     }
-
-     div#container_01 > p{
-     
-        font-size: 16px;
-        margin-bottom: 25px;
-        width: 82%;
+        text-align: justify;
+        width: 90%;
+    }
     
-        color: #fff;
-        text-shadow: 1px 1px 1px  rgba(0, 0, 0, 0.105);
-    }
-
-
-    div.bottom_consultar{
-        display: flex;
-        align-items: center;
-        gap: 10px;
-    
+    div.bottom_consultar {
         width: 80%;
-        padding: 8px;
-        
+        margin: auto;
+        padding: 10px;
+
+    }
+    
+
+    div.bottom_consultar>a {
+        font-family: var(---Font);
+        font-size: 14px;
     }
 
-    img#icon{
-        height: 20px;
-    }
 
-    div.bottom_consultar:hover{
-        background-color: #066f99d0;
-    }
 
-    div.bottom_consultar > a{
-        font-size: 15px;
+    article#img_container, article#img_container>img#foto_main {
+        height: 250px;
+        margin: auto;
     }
-
-    div.bottom_consultar > a:hover{
-        transform: none;
-        transition-duration: 1s;
-    }
-
-     article#img_container{
-        margin-bottom: 8em;
-        margin-top: 2em;
-     }
-
-    article#img_container > img#foto_main{
-        height: 18em;
-    }
+    
+   
+  
+    
 
     /*formulario*/
 
 
-    section{
+    section {
         display: flex;
         flex-direction: column-reverse;
-       
-    
+
+
         margin: auto;
         height: 30em;
         width: 20em;
         padding: 20px;
     }
 
-    form{
+    form {
         display: flex;
         flex-direction: column;
-        
+
         border-right: none;
         border-top: 1px solid rgb(62, 146, 255);
-        
-    
+
+
         width: 18em;
         height: 22em;
-   
-       
+
+
     }
 
-    form > h1{
+    form>h1 {
         font-size: 24px;
-        margin-bottom:8px;
-        margin-top:5px;
+        margin-bottom: 8px;
+        margin-top: 5px;
     }
 
-    form > h2{
+    form>h2 {
         font-size: 14px;
-        margin-bottom:17px;
+        margin-bottom: 17px;
     }
 
-    form > p{
-    
+    form>p {
+
         font-size: 13px;
-        margin-bottom:2em;
+        margin-bottom: 2em;
     }
-    
-    form > label{
+
+    form>label {
         font-size: 14px;
         color: var(---Cor01);
     }
 
-    input#bottom_consultar{
+    input#bottom_consultar {
         width: 70%;
         margin-bottom: 2em;
     }
 
-    form > input{
+    form>input {
         padding-top: 10px;
-      
+
     }
-        
-    #container_img{
-    width: 10em;
-    height: 10em;
-    padding: 8px;
-}
 
-img#img{
-    display: block;
-    margin: auto;
-    height: 8em;
-    width: 10em;
+    #container_img {
+        width: 10em;
+        height: 10em;
+        padding: 8px;
+    }
 
-    
-}
-    
-    
+    img#img {
+        display: block;
+        margin: auto;
+        height: 8em;
+        width: 10em;
+
+
+    }
+
+
 }
