--- a/styles/style-index/index-all.css
+++ b/styles/style-index/index-all.css
@@ -100,6 +100,7 @@
 
 body {
     margin: 0 auto;
+    height: 100vh;
 }
 
 header {
@@ -133,6 +134,8 @@ header>a#Link-login {
     text-decoration: none;
     text-align: center;
     color: #2BA8D9;
+
+    cursor: pointer;
 }
 
 
