--- a/styles/style-index/index-ipad.css
+++ b/styles/style-index/index-ipad.css
@@ -1,6 +1,12 @@
 /* versão para ipad - tabletes */
 
-@media screen and (min-width: 667px) and (max-width: 1040px) {
+@media screen and (min-width: 820px) and (max-width:1180px) {
+
+
+  
+    body{
+        height: 100vh;
+    }
 
     header>a>img#logo {
 
@@ -15,14 +21,14 @@
 
     main {
         gap: 3em;
-        padding: 4em 0em 7em 0em;
+        padding: 30px
     }
 
 
 
     div#container_one {
 
-        width: 20em;
+        width: 18em;
         padding: 8px;
     }
 
@@ -43,7 +49,7 @@
 
     div#container_one>a#link-consultar {
 
-        width: 70%;
+        width: 100%;
         padding: 6px;
         font-size: 14px;
 
