--- a/styles/style-index/index-screen.css
+++ b/styles/style-index/index-screen.css
@@ -1,8 +1,12 @@
 ﻿/* versão para iphone- celular */
 
-@media screen and (min-width: 375px) and (max-width: 667px) {
+@media screen and (min-width: 220px) and (max-width: 820px) {
 
-    
+    body{
+        height: 100vh;
+    }
+
+
     header>a>img#logo {
 
         height: 60px;
@@ -52,9 +56,10 @@
 
     div#container_one>a#link-consultar {
 
-        padding: 5px;
-        font-size: 11px;
+        padding: 4px;
+        font-size: 13px;
         width: 100%;
+    
 
     }
 
