--- a/styles/style-index/index-screen.css
+++ b/styles/style-index/index-screen.css
@@ -58,8 +58,8 @@
 
         padding: 4px;
         font-size: 13px;
-        width: 100%;
-    
+        width: 80%;
+        margin:auto;    
 
     }
 
