--- a/styles/style-login/login-ipad.css
+++ b/styles/style-login/login-ipad.css
@@ -1,52 +1,53 @@
 /* versão para ipad - tabletes */
 
-@media screen and (min-width: 912px) and (max-width:1180px) { 
+@media screen and (min-width: 720px) and (max-width:1180px) { 
 
     body{
-        background-color: rgb(206, 213, 219)
+        background-color: rgb(206, 213, 219);
     }
 
 
     main{
        
         padding: 15px;
-        width: 18em;
+        width: 25em;
+        height: 25em;
         
     }
 
 
     h1{
      
-        font-size: 2em;
+        font-size: 3em;
         font-weight: bold;
         color: #278AC4;
     }
     
     h3{
-        font-size:12px;   
-       
+        font-size:20px;   
         font-weight: 600;
         color: #1bafbfc0;
     }
 
     form{
-        padding: 8px;
+        padding: 20px;
        
     }
 
     form > input{
      
-        padding: 8px;  
+        padding: 10px;  
         margin-bottom: 30px;
-        width: 80%;
+        width: 90%;
      
     }
 
     input.login{
         font-family: var(---Font);
-        font-size: 14px;
+        font-size: 25px;
         width: 80%;
        
     }
 
+  
 }
