--- a/styles/style-login/login-ipad.css
+++ b/styles/style-login/login-ipad.css
@@ -4,44 +4,45 @@
    
     main{
        
-        padding: 30px;
+        padding: 10px;
         width: 25em;
-        height: 29em;
+        /* height: 24em; */
+    
         
     }
 
 
     h1{
      
-        font-size: 3em;
+        font-size: 2em;
         font-weight: bold;
         color: #278AC4;
     }
     
     h3{
-        font-size:20px;   
+        font-size:18px;   
         font-weight: 600;
         color: #1bafbfc0;
     }
 
     form{
-        padding: 20px;
+        padding: 15px;
        
     }
 
     form > input{
      
-        padding: 18px;  
+        padding:10px;  
         margin-bottom: 30px;
         width: 90%;
-        font-size: 28px;
+        font-size: 22px;
      
     }
 
 
     form > input::placeholder{
      
-       font-size: 28px;
+       font-size: 18px;
      
     }
 
@@ -55,7 +56,8 @@
        
     }
 
-  
 
   
 }
+
+
