--- a/styles/style-login/login-screen.css
+++ b/styles/style-login/login-screen.css
@@ -1,46 +1,46 @@
 ﻿/* versão para iphone- celular */
 
-@media screen and (min-width: 220px) and (max-width:720px)  {
 
-  body {
-    background-color: rgb(206, 213, 219);
-  }
+@media screen and (min-width: 280px) and (max-width:653px) {
+  /*{
+    background-color: rgb(14, 81, 101);
+  }*/
+
 
 
   main {
 
-    padding: 20px;
-    width: 13em;
+    width: 12em;
+    padding: 25px;
 
   }
-
 
   h1 {
-    font-size: 25px;
+    font-size: 22px;
   }
 
-  h3{
-    font-size:13px;
+  h3 {
+    font-size: 14px;
+  }
+
+  form {
+    width: 90%;
   }
 
   form>input {
+    width: 90%;
+    padding: 5px;
+    margin-bottom: 10px;
 
-    padding: 8px;
-    border: 1px solid #00000045;
-    margin-bottom: 1em;
+  }
+
+  input.login {
+    font-size: 10px;
+
+  }
+
+  form>input::placeholder {
+    font-size: 14px;
+  }
+
 }
-
-}
-
-
-
-
-
-
-
-
-
-
- 
-
-
