--- a/styles/style-login/login-ipad.css
+++ b/styles/style-login/login-ipad.css
@@ -1,98 +1,58 @@
 /* versão para ipad - tabletes */
 
-@media screen and (min-width: 481px) and (max-width:768px) {
+@media screen and (min-width: 481px) and (max-width:1368px) {
 
-   /* body {
+    /* body {
         background-color: rgb(69, 133, 13);
     }*/
 
-
+  
     main {
-        width: 40%;
-        padding: 10px;
-
+      width: 28%;
+     
     }
-
+  
+  
     h1 {
-        font-size: 35px;
+      margin-bottom: 1px;
+      font-size: 25px;
     }
-
+  
     h3 {
-        font-size: 18px;
+      font-size: 12px;
+  
     }
-
+  
+  
     form {
-        padding: 10px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 8px;
     }
-
+  
     form>input {
-        width: 70%;
-        padding: 5px;
-        margin-bottom: 10px;
-
+  
+      padding: 9px;
+  
     }
-
-    form>input,
+  
     form>input::placeholder {
-        font-size: 15px;
+      font-size: 12px;
     }
-
+  
+  
     input.login {
-        font-size: 14px;
-        padding:8px;
-
+      font-size: 9px;
+      padding: 8px;
+  
     }
-}
+  }
 
 
-/*ADAPTAÇÃO*/
-
-@media screen and (min-width: 769px) and (max-width:1024px) {
-    /*body {
-        background-color: rgb(133, 13, 13);
-    }*/
+  
 
 
-
-
-    main {
-
-        width: 30%;
-        padding: 10px;
-
-    }
-
-    h1 {
-        font-size: 30px;
-    }
-
-    h3 {
-        font-size: 19px;
-    }
-
-    main{
-        width: 40%;
-    }
-
-    form {
-        width: 90%;
-        padding: 15px;
-    }
-
-    form>input {
-        width: 70%;
-        padding: 10px;
-
-    }
-
-    form>input,
-    form>input::placeholder {
-        font-size: 14px;
-    }
-
-    input.login {
-        font-size: 14px;
-        padding: 9px;
-
-    }
-}
+    
+  
+ 
