--- a/styles/style-login/login-ipad.css
+++ b/styles/style-login/login-ipad.css
@@ -1,52 +1,15 @@
 /* versão para ipad - tabletes */
 
-@media screen and (min-width: 481px) and (max-width:1368px) {
+@media screen and (min-width: 481px) and (max-width:768px) {
 
-    /* body {
-        background-color: rgb(69, 133, 13);
-    }*/
+  body{
+    background-color: pink;
+  }
 
-  
-    main {
-      width: 28%;
-     
-    }
-  
-  
-    h1 {
-      margin-bottom: 1px;
-      font-size: 25px;
-    }
-  
-    h3 {
-      font-size: 12px;
-  
-    }
-  
-  
-    form {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 8px;
-    }
-  
-    form>input {
-  
-      padding: 9px;
-  
-    }
-  
-    form>input::placeholder {
-      font-size: 12px;
-    }
-  
-  
-    input.login {
-      font-size: 9px;
-      padding: 8px;
-  
-    }
+  main{
+    width: 15em;
+  }
+
   }
 
 
