--- a/styles/style-sistema/sistema-all.css
+++ b/styles/style-sistema/sistema-all.css
@@ -29,6 +29,8 @@ header {
     align-items: center;
     justify-content: space-between;
     border-bottom: 2px solid #BDE3F2;
+    
+ 
 }
 
 div#container-log {
@@ -80,14 +82,17 @@ div.container {
 
 /*MAIN */
 
+
 main{
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
 
-    padding: 10px;
+  
+    padding: 5px;
     border-radius: 10px;
+    margin: auto;
     background-color:#AEDFF2;
 }
 
@@ -98,8 +103,8 @@ div.container-cards{
 
     background-color: transparent;
     margin: auto;
-    padding: 8px;
-    width: 45em;
+    padding: 9px;
+    width: 44em;
 }
 
 
