--- a/styles/style-sistema/sistema-all.css
+++ b/styles/style-sistema/sistema-all.css
@@ -29,6 +29,7 @@ header {
     align-items: center;
     justify-content: space-between;
     border-bottom: 2px solid #BDE3F2;
+    margin-bottom: 4em;
     
  
 }
@@ -85,16 +86,11 @@ div.container {
 
 
 main{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-
-  
     padding: 5px;
     border-radius: 10px;
     margin: auto;
     background-color:#AEDFF2;
+    width: 60em;
 }
 
 div.container-cards{
@@ -143,5 +139,5 @@ h3.card-text, a.link-card{
 
 
 div#card-encerrar{
-    width: 25em;
+    width: 26em;
 }
