--- a/styles/style-sistema/sistema-all.css
+++ b/styles/style-sistema/sistema-all.css
@@ -88,9 +88,14 @@ div.container {
 main{
     padding: 5px;
     border-radius: 10px;
-    margin: auto;
     background-color:#AEDFF2;
     width: 60em;
+
+    padding: 9px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
 
 div.container-cards{
